Fixed spacing on dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,7 +4,7 @@
 }
 
 .heading {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .dashboard-enroll-button {
